lib/tools/orbit/test_output/ifelse.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/ifelse.orb: tests/ifelse.orb:2:29: Parse error
if x > 5 then x * 2 else if x > 0 then x / 2 else x
                            ^
